--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre= \"Alex\"\n"
+    "nombre = \"Alex\"\n",
+    "apellidos = \"Martinez\"\n"
    ]
   }
  ],
