--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "nombre = \"Alex\"\n",
-    "apellidos = \"Martinez\"\n"
+    "apellidos = \"Martinez\"\n",
+    "edad = 37\n"
    ]
   }
  ],
